Focus > fix outline spacing on some elements

--- a/themes/origins/styles/product-card.scss
+++ b/themes/origins/styles/product-card.scss
@@ -47,6 +47,7 @@
 
   .img-link {
     overflow: hidden;
+    outline-offset: -1px;
 
     img {
       height: var(--product-img-height);
