--- a/themes/origins/styles/product-quick-view.scss
+++ b/themes/origins/styles/product-quick-view.scss
@@ -25,6 +25,7 @@
           width: fit-content;
           text-align: center;
           white-space: nowrap;
+          outline-offset: -1px;
           text-overflow: ellipsis;
           color: var(--quick-view-text-color);
         }
